# lan-discovery

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.md
landiscovery/: __init__.py  cli.py  config.py
landiscovery/data/: oui.csv
landiscovery/discover/: dhcp_leases.py  mdns.py  netbios.py  ports.py  ssdp.py
landiscovery/fingerprint/: banners.py  classify.py  hostname.py  oui.py  ttl.py
landiscovery/net/: arp.py  arp_table.py  interfaces.py  npcap_install.py  ping.py  privileges.py
landiscovery/scan/: pipeline.py
landiscovery/store/: db.py  models.py  repo.py
landiscovery/web/: app.py
landiscovery/web/static/: style.css
landiscovery/web/templates/: _scan_status.html  base.html  device.html  index.html
tests/: conftest.py  test_classify.py  test_dhcp_leases.py  test_interfaces.py  test_mac_bits.py  test_netbios.py  test_oui.py  test_repo.py  test_ttl.py
