[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landiscovery"
version = "0.1.0"
description = "Cross-platform LAN device discovery, fingerprinting, and annotation (CLI + Web)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "lan-discovery contributors" }]
dependencies = [
    "psutil>=5.9",
    "scapy>=2.5",
    "zeroconf>=0.131",
    "httpx>=0.27",
    "dnspython>=2.6",
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
landiscovery = "landiscovery.cli:app"

[tool.setuptools.packages.find]
include = ["landiscovery*"]

[tool.setuptools.package-data]
"landiscovery" = ["data/*.csv", "web/templates/*.html", "web/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
